#4863: Fixing iframedialog's height doesn't stretch to 100%.
git-svn-id: https://svn.ckeditor.com/CKEditor/trunk@5248 da63caf2-3823-0410-a1e8-d69ccee00dfb

--- a/_source/skins/kama/dialog.css
+++ b/_source/skins/kama/dialog.css
@@ -692,6 +692,13 @@ body .cke_dialog
 	padding : 2px;
 	background-color : white;
 }
+
+/* Fix iframedialog's height doesn't stretch to 100% #4863.*/
+.cke_skin_kama .cke_browser_iequirks .cke_dialog_page_contents
+{
+	_position: absolute;
+}
+
 .cke_skin_kama .cke_dialog  #ImagePreviewLoader
 {
 	position: absolute;
